src/test/borrowck/borrowck_mutate_while_borrow.stderr
error: cannot assign to `a` because it is borrowed
  --> $DIR/borrowck_mutate_while_borrow.sq:6:5
   |
LL |     let b: &i32 = &a;
   |                   -- borrow of `a` occurs here
LL |     a = a + 5;
   |     ^^^^^^^^^ assignment to borrowed `a` occurs here
   |     print_int(a);
   |     print_int(*b);
   |               -- borrow later used here